--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
   },
   "dependencies": {
     "next": "12.2.5",
+    "notion-client": "^6.13.8",
+    "notion-types": "^6.13.4",
+    "notion-utils": "^6.13.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-notion-x": "^6.13.9"
   },
   "devDependencies": {
     "@types/node": "18.7.16",
