--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@types/react-dom": "18.0.6",
     "eslint": "8.23.0",
     "eslint-config-next": "12.2.5",
-    "typescript": "4.8.2"
+    "typescript": "4.8.2",
+    "windicss": "^3.5.6",
+    "windicss-webpack-plugin": "^1.7.6"
   }
 }
