--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "classnames": "^2.3.2",
     "next": "12.2.5",
     "notion-client": "^6.13.8",
     "notion-types": "^6.13.4",
