--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
-    "react-notion-x": "^6.13.9"
+    "react-notion-x": "^6.13.9",
+    "recoil": "^0.7.5"
   },
   "devDependencies": {
     "@types/node": "18.7.16",
