--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,7 @@
     "isolatedModules": true,
     "jsx": "preserve",
 		"baseUrl": ".",
+    "paths": {"@/*": ["./*"]},
     "typeRoots": ["./node_modules/@types"],
     "incremental": true
   },
