--- a/.env
+++ b/.env
@@ -2,5 +2,8 @@ NOTION_TOKEN = secret_4rN1ICx9qfEttI5UszJGRBljBiBZbkilcM7FeI2gGyE
 NOTION_DATABASE_ID = a75a91d3c30b4bb694c833c9cc0a960f
 NOTION_HOME_PAGE_ID = a2d338fb2c0c4522a7aca806b4eb599a
 NOTION_ABOUT_PAGE_ID = 5ed59fb3350243d2a696b026974785ac
+
+NOTION_BLOGS_IDS = ["2b33b4bab64d4aeb9ee8f62aabe1ae5d","e6eec69e1fd1495fa52d56f801f3d2c0"]
+
 NEXT_PUBLIC_PUBLIC_STORAGE=
 NEXT_PUBLIC_GITHUB_ACCOUNT=
