--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@heroicons/react": "^2.0.18",
     "@notionhq/client": "^2.2.12",
+    "classnames": "^2.3.2",
     "framer-motion": "^10.16.1",
     "next": "13.4.19",
     "next-themes": "^0.2.1",
