--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "framer-motion": "^10.16.1",
     "next": "13.4.19",
     "next-themes": "^0.2.1",
+    "prism-react-renderer": "^2.0.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "remeda": "^1.25.2",
