--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
+    "@nextui-org/code": "^2.0.18",
+    "@nextui-org/system": "^2.0.9",
+    "@nextui-org/theme": "^2.1.8",
     "@notionhq/client": "^2.2.12",
     "classnames": "^2.3.2",
     "framer-motion": "^10.16.1",
