--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@heroicons/react": "^2.0.18",
     "@nextui-org/code": "^2.0.18",
+    "@nextui-org/snippet": "^2.0.24",
     "@nextui-org/system": "^2.0.9",
     "@nextui-org/theme": "^2.1.8",
     "@notionhq/client": "^2.2.12",
