--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   "dependencies": {
     "@heroicons/react": "^2.0.18",
     "@nextui-org/code": "^2.0.18",
-    "@nextui-org/snippet": "^2.0.24",
     "@nextui-org/system": "^2.0.9",
     "@nextui-org/theme": "^2.1.8",
     "@notionhq/client": "^2.2.12",
@@ -21,6 +20,7 @@
     "next-themes": "^0.2.1",
     "prism-react-renderer": "^2.0.6",
     "react": "18.2.0",
+    "react-code-blocks": "^0.1.4",
     "react-dom": "18.2.0",
     "remeda": "^1.25.2",
     "slugify": "^1.6.6"
