--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@heroicons/react": "^2.0.18",
     "@nextui-org/code": "^2.0.18",
     "@nextui-org/link": "^2.0.21",
+    "@nextui-org/scroll-shadow": "^2.1.9",
     "@nextui-org/system": "^2.0.9",
     "@nextui-org/theme": "^2.1.8",
     "@notionhq/client": "^2.2.12",
