--- a/package.json
+++ b/package.json
@@ -10,9 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.18",
-    "@nextui-org/code": "^2.0.18",
-    "@nextui-org/link": "^2.0.21",
-    "@nextui-org/scroll-shadow": "^2.1.9",
+    "@nextui-org/react": "^2.1.13",
     "@nextui-org/system": "^2.0.9",
     "@nextui-org/theme": "^2.1.8",
     "@notionhq/client": "^2.2.12",
