--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@nextui-org/system": "^2.0.9",
     "@nextui-org/theme": "^2.1.8",
     "@notionhq/client": "^2.2.12",
+    "@tachikomas/notion-kit": "^0.0.2",
     "classnames": "^2.3.2",
     "framer-motion": "^10.16.1",
     "next": "13.4.19",
