--- a/package.json
+++ b/package.json
@@ -9,16 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@notionhq/client": "^2.2.11",
     "classnames": "^2.3.2",
     "next": "12.2.5",
-    "notion-client": "^6.13.8",
-    "notion-types": "^6.13.4",
-    "notion-utils": "^6.13.4",
+    "notion-client": "^6.16.0",
+    "notion-types": "^6.16.0",
+    "notion-utils": "^6.16.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.4.0",
-    "react-notion-x": "^6.13.9",
-    "recoil": "^0.7.5"
+    "react-icons": "^4.10.1",
+    "react-notion-x": "^6.16.0",
+    "recoil": "^0.7.7"
   },
   "devDependencies": {
     "@types/node": "18.7.16",
@@ -28,6 +29,6 @@
     "eslint-config-next": "12.2.5",
     "typescript": "4.8.2",
     "windicss": "^3.5.6",
-    "windicss-webpack-plugin": "^1.7.6"
+    "windicss-webpack-plugin": "^1.7.8"
   }
 }
